[gd_scene load_steps=7 format=3 uid="uid://cgio8svje7qr5"]

[ext_resource type="Script" path="res://main.gd" id="1_s1osy"]
[ext_resource type="Script" path="res://graph.gd" id="2_fsvlp"]
[ext_resource type="Script" path="res://engines/engine_params.gd" id="2_y0ife"]
[ext_resource type="PackedScene" uid="uid://b5bdmgscfmbfk" path="res://engine_audio_gen.tscn" id="4_wgv24"]

[sub_resource type="Resource" id="Resource_ye4ei"]
script = ExtResource("2_y0ife")
cylinder_count = 4
bore = 78.0
stroke_ratio = 0.95
max_bmep = 10.5
max_rpm = 6000.0
idle_rpm = 900.0
engine_brake = 60.0
inertia = 0.25

[sub_resource type="Curve" id="Curve_5spol"]
_data = [Vector2(0, 0), 0.0, 4.87895, 0, 0, Vector2(0.160194, 0.4), 0.24782, 0.24782, 0, 0, Vector2(0.563107, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.252632), -4.64661, 0.0, 0, 0]
point_count = 4

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s1osy")
engine_params = SubResource("Resource_ye4ei")
torque_curve = SubResource("Curve_5spol")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CylinderCount" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/CylinderCount"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Cylinder Count"

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/CylinderCount"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
min_value = 1.0
max_value = 16.0
value = 4.0

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/CylinderCount"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "4"

[node name="MaxRPM" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/MaxRPM"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Max RPM"

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/MaxRPM"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 20000.0
step = 100.0
value = 7000.0

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/MaxRPM"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Max RPM"

[node name="IdleRPM" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/IdleRPM"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Idle RPM"

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/IdleRPM"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 4000.0
step = 10.0
value = 750.0

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/IdleRPM"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Idle RPM"

[node name="Inertia" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Inertia"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Inertia"

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/Inertia"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 0.5
step = 0.001
value = 0.1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/Inertia"]
layout_mode = 2
text = "0.20"

[node name="EngineBrake" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/EngineBrake"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Engine Brake"

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/EngineBrake"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 200.0

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/EngineBrake"]
layout_mode = 2
text = "5.0"

[node name="MaxTorque" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/MaxTorque"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Max Torque"

[node name="Torque" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Torque"]
layout_mode = 2
text = "Torque = "

[node name="RPM" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/RPM"]
layout_mode = 2
text = "rpm = "

[node name="Displacement" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Displacement"]
layout_mode = 2
text = "Displacement = "

[node name="Graph" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_fsvlp")

[node name="EngineAudioGen" parent="." instance=ExtResource("4_wgv24")]

[connection signal="value_changed" from="HBoxContainer/VBoxContainer/CylinderCount/HSlider" to="." method="_on_cylinder_count_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/MaxRPM/HSlider" to="." method="_on_max_rpm_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/IdleRPM/HSlider" to="." method="_on_idle_rpm_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Inertia/HSlider" to="." method="_on_inertia_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/EngineBrake/HSlider" to="." method="_on_engine_brake_changed"]
[connection signal="resized" from="HBoxContainer/Graph" to="HBoxContainer/Graph" method="_on_resized"]
